--- a/styles.css
+++ b/styles.css
@@ -199,18 +199,37 @@ tr{
     
     
 }
-.pantalla{
+.board{
+    display: grid;
+    grid-template-columns:repeat(10,1fr);
         width: 350px;
         height: 350px;
-        margin-top: 20px;
+        margin-top: 15px;
+        margin-left: 15px;
         border: 5px solid black;
-    }
-
-    .botones{
+}
+.square {
+        aspect-ratio: 1;
+}
+    
+.emptySquare {
+        background-color: #6d71b5;
+}
+    
+.snakeSquare {
+        background-color: #e3e773;
+        border: 1px solid #000;
+}
+    
+.foodSquare {
+        background-color: #55e7e7;
+        border: 1px solid #000;
+}
+.botones{
       width: 100%;
       height: 100%;
       position: relative;
-    }
+}
 
 .tamaño-1{
     width: 140px;
