--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body{
     background-color: green;
    
     
-    }
+}
 .titulo{
     width: 100%; 
     height: 100px;
@@ -57,14 +57,14 @@ body{
     margin-left: 100px;
     text-align: center;
     list-style: none; 
-    }
+}
 
 .menu >ul >li{ 
 line-height: 40px;
 float: left;
 
         
-        }
+}
        
 .menu >ul >li a{
     display: block;
@@ -80,12 +80,12 @@ float: left;
 .menu > ul > li > a:hover{
         background-color: #70b233;
         box-shadow: 0px 0px 4px green inset; /*Sombra interior*/
-    }
+}
     .parrafo{
 
         font-size: 15px;
         line-height: 15px;
-    }
+}
 
 /*Fin de menu*/
 
@@ -199,32 +199,19 @@ tr{
     
     
 }
-.board{
+
+.contenedor{
+    background-color: black;
     display: grid;
-    grid-template-columns:repeat(10,1fr);
-        width: 350px;
-        height: 350px;
-        margin-top: 15px;
-        margin-left: 15px;
-        border: 5px solid black;
+    grid-template-rows: repeat(10,auto);
+    grid-template-columns: repeat(10,auto);
+    width: 350px;
+    height: 350px;
+    margin-top: 15px;
+    margin-left: 15px;
+    border: 5px solid black;
 }
-.square {
-        aspect-ratio: 1;
-}
-    
-.emptySquare {
-        background-color: #6d71b5;
-}
-    
-.snakeSquare {
-        background-color: #e3e773;
-        border: 1px solid #000;
-}
-    
-.foodSquare {
-        background-color: #55e7e7;
-        border: 1px solid #000;
-}
+
 .botones{
       width: 100%;
       height: 100%;
